--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
         </div>
     </div>
-    <div></p>class="about">I have 15 years of experience in Web design</div>
+    <div>class="about">I have 15 years of experience in Web design</div>
 
 
 
