--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         </div> 
         <div class="content">
             <h1>I am <br><span>Micah Barasa</span></h1>
-            <p class="par">This is my official portfolio website showing,<br>
-                 my details and web development work </p>
+            <p class="par"> I have 15 years of experience in <em>web development and design</em></p>
 
                 <button class="cn"><a href="#">DOWNLOAD CV</a></button>
 
@@ -40,7 +39,6 @@
                 </div>
         </div>
     </div>
-    <div>class="about">I have 15 years of experience in Web design</div>
 
 
 
