--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="content">
             <h1>I am <br><span>Micah Barasa</span></h1>
             <p class="par"> I have 15 years of experience in <em>web development and design</em></p>
-            <p>Located at Ngong road in Nairobi</p>
+            <p>Located at Ngong road in Nairobi/p>
 
                 <button class="cn"><a href="#">DOWNLOAD CV</a></button>
 
