--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <p class="par"> I have 15 years of experience in <em>web development and design</em></p>
             <p>Located at Ngong road in Nairobi</p>
             <p>I pay a keen interest to my customers for <b>customer satisfaction</b></p>
+            <p>You can reach me 0114212111</p>
 
                 <button class="cn"><a href="#">DOWNLOAD CV</a></button>
 
