--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 <button class="cn"><a href="#">DOWNLOAD CV</a></button>
 
                 <div class="image">
-                    <img src="Micah.jpg" alt="portfolio image">
+                    <img src="Mica.jpg" alt="portfolio image">
 
                 </div>
                     </div>
-                
+                    <div>
                 </div>
         </div>
     </div>
